--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tetris-3d"
 version = "0.1.0"
-authors = ["unuzdaq42 <keremkalintas_17@hotmail.com>"]
+authors = ["kalintas <keremkalinntas@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
